argocd/bases/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie
  template:
    metadata:
      labels:
        app: mealie
    spec:
      volumes:
        - name: mealie-vol
          persistentVolumeClaim:
            claimName: mealie-pvc
      containers:
        - name: app
          image: roman1grekov/mealie:latest
          ports:
            - name: http
              containerPort: 9000
          volumeMounts:
            - mountPath: "/app/data"
              name: mealie-vol
          resources:
            requests:
              memory: "1024Mi"
              cpu: "1000m"
            limits:
              memory: "2048Mi"
              cpu: "1500m"
