argocd/bases/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mealie-service
spec:
  selector:
    app: mealie
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
