argocd/bases/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie
  annotations:
spec:
  ingressClassName: nginx
  rules:
  - host: "mealie.danit.watashinoheyadesu.pp.ua"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mealie-service
            port:
              number: 80
